# app.js
@@ -4,6 +4,7 @@ const swaggerUi = require('swagger-ui-express');
 const YAML = require('yamljs');
 const swaggerDocument = YAML.load('./swagger.yaml'); // Load your YAML file
 const hospitalGroupRoutes = require('./routes/hospitalGroupRoutes');
+const hospitalRoutes= require('./routes/HospitlRoutes')
 const sequelize = require('./database/connection');
 // Middleware for parsing JSON bodies
 app.use(express.json());
@@ -12,8 +13,9 @@ app.use(express.json());
 app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 
 // Use hospitalGroupRoutes
-app.use('/api/v1/hospital', hospitalGroupRoutes);
 
+app.use('/api/v1/hospital', hospitalGroupRoutes);
+app.use('/api/v1/hospital', hospitalRoutes);
 
 
 sequelize.sync({ force: false }) // Set force to true to drop and recreate the table every time the server starts
